<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:visibility="visible"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/userinformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/user_information"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/black"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageView
            android:id="@+id/ivProfileImage"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/defaultimage" />
        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="76dp"
            android:layout_height="76dp"


            android:layout_marginLeft="24dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="24dp" />
        <LinearLayout
            android:id="@+id/llUserId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:padding="5dp" >

            <TextView
                style="@style/normaltext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userid_" />

            <TextView
                android:id="@+id/tvUserId"
                style="@style/normaltext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp" >

            <TextView
                style="@style/normaltext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name_" />

            <TextView
                android:id="@+id/tvUserName"
                style="@style/normaltext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp" >

            <TextView
                style="@style/normaltext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name_" />

            <TextView
                android:id="@+id/tvFirstNAme"
                style="@style/normaltext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="TextView" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/llMeadleName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp" >

            <TextView
                style="@style/normaltext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name_" />

            <TextView
                android:id="@+id/tvMeadleName"
                style="@style/normaltext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp" >

            <TextView
                style="@style/normaltext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name_" />

            <TextView
                android:id="@+id/tvLastName"
                style="@style/normaltext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llBirthDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp" >

            <TextView
                style="@style/normaltext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birthday_" />

            <TextView
                android:id="@+id/tvBirthday"
                style="@style/normaltext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llEmailId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp" >

            <TextView
                style="@style/normaltext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emailid_" />

            <TextView
                android:id="@+id/tvEmail"
                style="@style/normaltext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="TextView" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>